# advent-of-code

./: .gitignore
2024/: helpful-commands.md
2024/analysis/: analyze.sh  collect_metrics.py  generate_visualizations.py  pyproject.toml  results.json
2024/inputs/: day13.txt  day17.txt
2024/output/: day24_gate_network.dot
2024/prompts/: README.md  day01.md  day02.md  day03.md  day04.md  day05.md  day06.md  day07.md  day08.md  day09.md  day10.md  day11.md  day12.md  day13.md  day14.md  day15.md  day16.md  day17.md  day18.md  day19.md
2024/python/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py  input_util.py  pyproject.toml  timing_util.py
2024/python/adhoc/: best_day21_soln.py  grid_viz.py  linalg_recall.py  z3_explore.py
2024/rust/: Cargo.toml
2024/rust/src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  main.rs  solution.rs
