[tool.poetry]
name = "analysis"
version = "0.1.0"
description = ""
authors = ["John Larkin <john@johnjlarkin.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.3"
statistics = "^1.0.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
