[tool.flake8]
max-line-length = 120
ignore = ["BLK999", "W503", "PT009"]

[tool.black]
line-length = 120
target-version = ["py38"]

[tool.ruff]
line-length = 120
lint.select = ["E4", "E7", "E9", "F", "B", "E501"]
lint.extend-select = ["I"]

[tool.ruff.format]
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
addopts = "-ra -v --strict-markers -m 'not manual_test'"
markers = [
    "unit_test: Tests the behavior of one function (unit) in isolation from external infrastructure.",
    "integration_test: Tests the behavior of one function that integrates with external infrastructure.",
    "end_to_end_test: Tests the behavior of a full application, end-to-end.",
    "manual_test: Marks a test as a manual test that should not be run automatically."
]
testpaths = [
    "tests"
]

[tool.coverage.run]
source = [
    "aoc2024"
]

[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = "Python solutions to advent-of-code-2024"
authors = ["John Larkin <john@johnjlarkin.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mypy = "^1.13.0"
ruff = "^0.8.1"
rich = "^13.9.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

